--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,32 @@
 beautifulsoup4==4.11.1
-boto3==1.26.55
-botocore==1.29.55
+boto3==1.26.59
+botocore==1.29.59
+Brotli==1.0.9
 bs4==0.0.1
+cachetools==5.3.0
 certifi==2022.12.7
 charset-normalizer==3.0.1
+google-api-core==2.11.0
+google-api-python-client==2.74.0
+google-auth==2.16.0
+google-auth-httplib2==0.1.0
+googleapis-common-protos==1.58.0
+httplib2==0.21.0
 idna==3.4
 jmespath==1.0.1
+mutagen==1.46.0
+protobuf==4.21.12
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycryptodomex==3.16.0
+pyparsing==3.0.9
 python-dateutil==2.8.2
 requests==2.28.2
+rsa==4.9
 s3transfer==0.6.0
 six==1.16.0
 soupsieve==2.3.2.post1
+uritemplate==4.1.1
 urllib3==1.26.14
+websockets==10.4
+yt-dlp==2023.1.6
